--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,7 +17,7 @@
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
@@ -39,7 +39,14 @@ h1 {
   align-items: flex-start;
   flex-direction: column;
   flex-wrap: wrap;
+  text-align: center;
 }
+
+.weather-section {
+  width: 100%;
+  box-sizing: border-box; 
+}
+
 
 .code {
   font-family:'Courier New', Courier, monospace;
