--- a/frontend/src/pages/Homepage.css
+++ b/frontend/src/pages/Homepage.css
@@ -1,3 +1,37 @@
+.app-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  
+}
+
+.logo img {
+  max-height: 50px; 
+  border-radius: 50%;
+}
+
+.alert-icon img {
+  max-height: 30px; 
+}
+
+.alert-icon a {
+  text-decoration: none; 
+  color: inherit; /* Inherit text color from parent */
+}
+
+.aleart-btn {
+  background-color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.aleart-btn:hover {
+  background-color: #f1685f;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
