--- a/frontend/src/pages/Today.css
+++ b/frontend/src/pages/Today.css
@@ -1,23 +1,32 @@
-.today-content {
-  background-color: gray; /* Set the background color to gray */
-  padding: 16px; /* Add padding to create some space around the content */
+.today-section {
+  display: flex;
+  flex-direction: column;
 }
 
 .wraptop-today {
   display: flex;
-  justify-content: space-between; /* Center horizontally */
-  align-items: flex-start; /* Align items to the top */
-  gap: 24px; /* Add some space between items */
-  max-width: 1280px; /* Set a maximum width for the content */
-  margin: 0 auto; /* Center the content horizontally */
-  padding: 16px; /* Add padding to the content */
-  box-sizing: border-box; /* Include padding in width calculation */
+  justify-content: start;
+  align-items: center;
+  padding: 10px;
 }
 
-.home-icon {
-  align-self: flex-start; /* Align the home icon to the top */
+.today-content {
+  
 }
 
-h2 {
-  margin: 0; /* Remove default margin on h2 */
+.home-icon img {
+  width: 40px;
+  margin-right: 10px;
+}
+
+.today-data {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 450px;
+  border: 1px black solid;
+}
+
+.wrap-date {
+  
 }
