--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,11 @@
+* {
+  /* border: solid 1px green; */
+  box-sizing: border-box;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  box-sizing: border-box;
 }
 
