--- a/frontend/src/pages/Today.css
+++ b/frontend/src/pages/Today.css
@@ -1,32 +1,51 @@
 .today-section {
   display: flex;
   flex-direction: column;
+  width: 450px;
+  text-align: center;
 }
 
 .wraptop-today {
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 10px;
-}
-
-.today-content {
-  
+  background-color: #d3d3d3;
+  margin-top: 0;
+  padding: 0px;
 }
 
 .home-icon img {
   width: 40px;
-  margin-right: 10px;
+  margin-right: 20px;
+  margin-left: 10px;
 }
 
 .today-data {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
-  width: 450px;
-  border: 1px black solid;
 }
 
-.wrap-date {
-  
+.astro-data {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px black solid;
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+}
+
+.info-data {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px black solid;
+  padding-top: 20px;
+}
+
+.info-icon {
+  display: flex;
+  height: 70px;
+  align-items: center;
+  justify-content: center;
 }
