added search location autocomplete

--- a/frontend/src/pages/Search.css
+++ b/frontend/src/pages/Search.css
@@ -19,3 +19,31 @@
   margin-right: 20px;
   margin-left: 10px;
 }
+
+.search-input {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.search-box {
+  flex: 1;
+  padding: 5px;
+}
+
+.search-box input{
+  width: 100%;
+  padding: 5px;
+}
+
+.search-result ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.search-result li {
+  text-align: left;
+  border-bottom: solid 1px black;
+  padding: 10px;
+}
