--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,3 +9,59 @@
   padding: 2rem;
 }
 
+
+@media (max-width: 500px) {
+  .smartphone h1 {
+    font-size: 28px;
+    margin-bottom: 10px;
+  }
+  .footer-card h4 {
+      font-size: 16px;
+  }
+  .footer-card {
+    margin: 0 20px;
+    padding: 10px;
+  }
+  .icon-footer {
+    height: 10px;
+    margin-top: 10px;
+  }
+}
+
+@media (min-width: 501px) and (max-width: 768px) {
+  .tablet h1 {
+    font-size: 40px;
+    margin-bottom: 15px;
+  }
+  .footer-card h4 {
+    font-size: 18px;
+  }
+  .footer-card {
+    margin: 0 30px;
+    padding: 20px;
+  }
+  .icon-footer {
+    height: 10px;
+    margin-top: 15px;
+  }
+}
+
+@media (min-width: 769px){
+  .normal h1 {
+    font-size: 60px;
+    margin-bottom: 20px;
+  }
+  .footer-card h4 {
+    font-size: 20px;
+  }
+  .footer-card {
+    margin: 0 40px;
+    padding: 30px;
+  }
+  .icon-footer {
+    height: 15px;
+    margin-top: 20px;
+  }
+  
+}
+
