--- a/frontend/src/components/Recommendation.css
+++ b/frontend/src/components/Recommendation.css
@@ -4,11 +4,36 @@
   text-align: center; 
 }
 
-.recommendation-section p {
-  font-size: 24px; 
-  margin-bottom: 20px;
+.jacket-icon {
+  height: 100%;
 }
 
-.recommendation-section img {
-  max-width: 100%;
+@media (max-width: 500px) {
+  .smartphone .recommendation-section p {
+    font-size: 24px; 
+    margin-bottom: 10px;
+  }
+  .recommendation-section img {
+    max-width: 70%;
+  }
+}
+
+@media (min-width: 501px) and (max-width: 768px) {
+  .tablet .recommendation-section p {
+    font-size: 28px; 
+    margin-bottom: 15px;
+  }
+  .recommendation-section img {
+    max-width: 80%;
+  }
+}
+
+@media (min-width: 769px){
+  .normal .recommendation-section p {
+    font-size: 32px; 
+    margin-bottom: 20px;
+  }
+  .recommendation-section img {
+    max-width: 90%;
+  }
 }
