--- a/frontend/src/components/SettingOption.css
+++ b/frontend/src/components/SettingOption.css
@@ -1,6 +1,3 @@
-.settingOption {
-
-}
 .goback-icon {
   display: flex;
   justify-content: start;
@@ -13,7 +10,32 @@
   background-color: rgb(184, 182, 182);
   padding: 10px;
 }
+.save-btn {
+  margin-top: 20px;
+}
 
-.setting-box {
+@media (max-width: 500px) {
+  .smartphone .setting-box h3 {
+    font-size: 16px;
+  }
+  .setting-box p {
+    font-size: 15px;
+  }
+}
 
+@media (min-width: 501px) and (max-width: 768px) {
+  .tablet .setting-box h3 {
+    font-size: 18px;
+  }
+  .setting-box p {
+    font-size: 16px;
+  }
+}
+@media (min-width: 769px){
+  .normal .setting-box h3 {
+    font-size: 20px;
+  }
+  .setting-box p {
+    font-size: 18px;
+  }
 }
