--- a/frontend/src/pages/Location.css
+++ b/frontend/src/pages/Location.css
@@ -1,7 +1,6 @@
 .location-section {
   display: flex;
   flex-direction: column;
-  width: 450px;
   text-align: center;
 }
 
@@ -12,12 +11,6 @@
   background-color: #d3d3d3;
   margin-top: 0;
   padding: 0px;
-}
-
-.home-icon img {
-  width: 40px;
-  margin-right: 20px;
-  margin-left: 10px;
 }
 
 .wraptop-today h2 { 
@@ -49,4 +42,39 @@
 
 .trash-icon {
   margin-right: 10px;
+}
+
+@media (max-width: 500px) {
+  .smartphone .location-section {
+    width: 400px;
+  }
+  h2 {
+    font-size: 20px;
+  }
+  .location-card p {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 501px) and (max-width: 768px) {
+  .tablet .location-section {
+    width: 600px;
+  }
+  h2 {
+    font-size: 25px;
+  }
+  .location-card p {
+    font-size: 17px;
+  }
+}
+@media (min-width: 769px){
+  .normal .location-section {
+    width: 800px;
+  }
+  h2 {
+    font-size: 30px;
+  }
+  .location-card p {
+    font-size: 18px;
+  }
 }
