--- a/frontend/src/pages/Setting.css
+++ b/frontend/src/pages/Setting.css
@@ -1,7 +1,6 @@
 .setting-section {
   display: flex;
   flex-direction: column;
-  width: 450px;
   text-align: center;
 }
 
@@ -12,12 +11,6 @@
   background-color: #d3d3d3;
   margin-top: 0;
   padding: 0px;
-}
-
-.home-icon img {
-  width: 40px;
-  margin-right: 20px;
-  margin-left: 10px;
 }
 
 .setting-card h3 {
@@ -39,4 +32,63 @@
 
 select {
   margin-left: 10px;
+}
+
+@media (max-width: 500px) {
+  .smartphone .wraptop-today {
+    width: 400px;
+  }
+  .wraptop-today h2{
+    font-size: 20px;
+  }
+  .home-icon img {
+    width: 20px;
+    margin-right: 10px;
+    margin-left: 5px;
+  }
+  .setting-card h3 {
+    font-size: 16px;
+  }
+  .setting-card p {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 501px) and (max-width: 768px) {
+  .tablet .wraptop-today {
+    width: 600px;
+  }
+  .wraptop-today h2{
+    font-size: 25px;
+  }
+  .home-icon img {
+    width: 30px;
+    margin-right: 15px;
+    margin-left: 10px;
+  }
+  .setting-card h3 {
+    font-size: 18px;
+  }
+  .setting-card p {
+    font-size: 15px;
+  }
+}
+@media (min-width: 769px){
+  .normal .wraptop-today {
+    width: 800px;
+  }
+  .wraptop-today h2{
+    font-size: 30px;
+  }
+  .home-icon img {
+    width: 40px;
+    margin-right: 20px;
+    margin-left: 10px;
+  }
+  .setting-card h3 {
+    font-size: 20px;
+  }
+  .setting-card p {
+    font-size: 16px;
+  }
 }
