--- a/frontend/src/pages/Today.css
+++ b/frontend/src/pages/Today.css
@@ -1,7 +1,6 @@
 .today-section {
   display: flex;
   flex-direction: column;
-  width: 450px;
   text-align: center;
 }
 
@@ -12,12 +11,6 @@
   background-color: #d3d3d3;
   margin-top: 0;
   padding: 0px;
-}
-
-.home-icon img {
-  width: 40px;
-  margin-right: 20px;
-  margin-left: 10px;
 }
 
 .today-data {
@@ -32,7 +25,7 @@
   align-items: center;
   border: 1px black solid;
   padding-bottom: 10px;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 .info-data {
@@ -48,4 +41,48 @@
   height: 70px;
   align-items: center;
   justify-content: center;
+}
+
+@media (max-width: 500px) {
+  .smartphone .today-section {
+    width: 400px;
+  }
+  h3 {
+    font-size: 20px;
+  }
+  h4 {
+    font-size: 18px;
+  }
+  .today-data p {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 501px) and (max-width: 768px) {
+  .tablet .today-section {
+    width: 600px;
+  }
+  h3 {
+    font-size: 30px;
+  }
+  h4 {
+    font-size: 20px;
+  }
+  .today-data p {
+    font-size: 18px;
+  }
+}
+@media (min-width: 769px){
+  .normal .today-section {
+    width: 800px;
+  }
+  h3 {
+    font-size: 40px;
+  }
+  h4 {
+    font-size: 30px;
+  }
+  .today-data p {
+    font-size: 20px;
+  }
 }
