--- a/frontend/src/components/Recommendation.css
+++ b/frontend/src/components/Recommendation.css
@@ -3,7 +3,9 @@
   flex-direction: column;
   text-align: center; 
 }
-
+.recommendation-section p {
+  margin: 0;
+}
 .jacket-icon {
   height: 100%;
 }
@@ -11,7 +13,6 @@
 @media (max-width: 500px) {
   .smartphone .recommendation-section p {
     font-size: 24px; 
-    margin-bottom: 10px;
   }
   .recommendation-section img {
     max-width: 70%;
@@ -20,8 +21,7 @@
 
 @media (min-width: 501px) and (max-width: 768px) {
   .tablet .recommendation-section p {
-    font-size: 28px; 
-    margin-bottom: 15px;
+    font-size: 28px;
   }
   .recommendation-section img {
     max-width: 80%;
@@ -31,7 +31,6 @@
 @media (min-width: 769px){
   .normal .recommendation-section p {
     font-size: 32px; 
-    margin-bottom: 20px;
   }
   .recommendation-section img {
     max-width: 90%;
