--- a/frontend/src/pages/Location.css
+++ b/frontend/src/pages/Location.css
@@ -45,7 +45,7 @@
 }
 
 @media (max-width: 500px) {
-  .smartphone .location-section {
+  .smartphone .wraptop-today {
     width: 400px;
   }
   h2 {
@@ -57,7 +57,7 @@
 }
 
 @media (min-width: 501px) and (max-width: 768px) {
-  .tablet .location-section {
+  .tablet .wraptop-today  {
     width: 600px;
   }
   h2 {
@@ -68,7 +68,7 @@
   }
 }
 @media (min-width: 769px){
-  .normal .location-section {
+  .normal .wraptop-today  {
     width: 800px;
   }
   h2 {
