--- a/frontend/src/pages/Search.css
+++ b/frontend/src/pages/Search.css
@@ -1,7 +1,6 @@
 .search-section {
   display: flex;
   flex-direction: column;
-  width: 450px;
   text-align: center;
 }
 
@@ -15,7 +14,6 @@
 }
 
 .back-icon img {
-  width: 40px;
   margin-right: 20px;
   margin-left: 10px;
 }
@@ -46,4 +44,63 @@
   text-align: left;
   border-bottom: solid 1px black;
   padding: 10px;
+}
+
+@media (max-width: 500px) {
+  .smartphone .wraptop-today {
+    width: 400px;
+  }
+  .wraptop-today h2{
+    font-size: 20px;
+  }
+  .back-icon img, .search-icon img {
+    width: 20px;
+    margin-right: 10px;
+    margin-left: 5px;
+  }
+  .search-result li {
+    font-size: 16px;
+  }
+  input {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 501px) and (max-width: 768px) {
+  .tablet .wraptop-today {
+    width: 600px;
+  }
+  .wraptop-today h2{
+    font-size: 25px;
+  }
+  .back-icon img, .search-icon img {
+    width: 30px;
+    margin-right: 15px;
+    margin-left: 10px;
+  }
+  .search-result li {
+    font-size: 18px;
+  }
+  input {
+    font-size: 15px;
+  }
+}
+@media (min-width: 769px){
+  .normal .wraptop-today {
+    width: 800px;
+  }
+  .wraptop-today h2{
+    font-size: 30px;
+  }
+  .back-icon img, .search-icon img{
+    width: 40px;
+    margin-right: 20px;
+    margin-left: 10px;
+  }
+  .search-result li{
+    font-size: 20px;
+  }
+  input {
+    font-size: 16px;
+  }
 }
