--- a/frontend/src/components/CurrentWeather.css
+++ b/frontend/src/components/CurrentWeather.css
@@ -5,12 +5,25 @@
 
 .current-weather h2 {
   margin: 0;
+	font-weight: 700;
 }
 
 .weather-wrap {
   display: flex;
-  justify-content: center; /* Horizontally center the child elements */
-  align-items: center; /* Vertically center the child elements */
+	justify-content: center;
+	align-items: center;
+	padding-top: 20px;
+	border-radius: 15px;
+	overflow: hidden;
+	border: 3px solid #fff;
+	box-shadow: 0 8px 10px -4px rgba(#000, 0.2);
+	transform-origin: center center;
+	transition: 0.15s ease;
+	&:hover,
+	&:focus {
+		transform: translatey(-4px);
+		box-shadow: 0 12px 14px -4px rgba(#000, 0.3);
+	}
 }
 
 .wrap-icon {
@@ -21,12 +34,17 @@
   height: 80px;
 }
 
+p {
+  color: var(--c-gray-600);
+  margin-top: 0.375em;
+}
+
 @media (max-width: 500px) {
   .smartphone h2 {
-    font-size: 20px;
+    font-size: 2rem;
   }
   p {
-    font-size: 16px;
+    font-size: 1rem;
   }
   .mainicon {
     height: 120px;
@@ -42,10 +60,10 @@
 
 @media (min-width: 501px) and (max-width: 768px) {
   .tablet h2 {
-    font-size: 30px;
+    font-size: 3.5rem;
   }
   p {
-    font-size: 20px;
+    font-size: 1.5rem;
   }
   .mainicon {
     height: 150px;
@@ -61,10 +79,10 @@
 
 @media (min-width: 769px){
   .normal h2 {
-    font-size: 40px;
+    font-size: 5rem;
   }
   p {
-    font-size: 30px;
+    font-size: 2rem;
   }
   .mainicon {
     height: 180px;
