--- a/frontend/src/components/Recommendation.css
+++ b/frontend/src/components/Recommendation.css
@@ -4,10 +4,15 @@
   text-align: center; 
 }
 .recommendation-section p {
-  margin: 0;
+  margin-top: 30px;
+  margin-bottom: 0;
+  font-size: 1.125rem;
+	font-weight: 500;
 }
+
 .jacket-icon {
   height: 100%;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 500px) {
