--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,13 +5,28 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #e2dbdb;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --c-gray-100: #fbf8f2;
+	--c-gray-200: #fcfdfe;
+	--c-gray-300: #e9ebec;
+	--c-gray-400: #e3e4ea;
+  --c-gray-500: #bcbcc2;
+	--c-gray-600: #5f5f5f;
+	--c-gray-900: #1d1d1d;
+	--c-blue-300: #a8dee2;
+	--c-blue-500: #2ab3c0;
+	--c-green-500: #80b895;
+	--c-green-300: #bad5ca;
+	--c-red-500: #ea605e;
+	--c-yellow-300: #f8e0b1;
+	--c-yellow-500: #f9bc73;
+  --rotation: -3deg;
 }
 
 body {
@@ -25,6 +40,10 @@ body {
   background-repeat: no-repeat;
   background-position: center; /* Center the image */
   background-color: #dcd3d3;
+  font-family: 'Urbanist', sans-serif;
+  line-height: 1.5;
+  padding-top: 3vw;
+  padding-bottom: 3vw;
 }
 
 @media (prefers-color-scheme: light) {
@@ -45,3 +64,7 @@ body {
   color: #ffffff
 }
 
+input,
+button {
+	font: inherit;
+}
