--- a/frontend/src/pages/Homepage.css
+++ b/frontend/src/pages/Homepage.css
@@ -1,41 +1,48 @@
 .app-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  
+  display: grid;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 1.5rem;
+	grid-template-columns: 1fr 2fr 1fr;
 }
 
 .logo img {
   max-height: 50px; 
   border-radius: 50%;
+	border: 2px solid var(--c-gray-500);
 }
 
 .alert-icon img {
   max-height: 30px; 
 }
 
-.alert-icon a {
-  text-decoration: none; 
-  
+.alert-icon {
+  display: flex;
+	align-items: center;
+	justify-content: flex-end;
 }
 
 .aleart-btn {
-  background-color: white;
-  border: none;
-  padding: 5px 10px;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-.aleart-btn:hover {
-  background-color: #f1685f;
+  padding: 0;
+	border: 0;
+	background-color: transparent;
+	margin-right: 1rem;
+	position: relative;
+	transform-origin: center center;
+	transition: 0.15s ease;
+	cursor: pointer;
+	&:hover,
+	&:focus {
+		transform: rotate(15deg);
+  }
 }
 
 h1 {
   line-height: 1.1;
-  text-align: center;
-  margin: 0;
+  font-size: 1.25rem;
+	font-weight: 600;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 a {
@@ -56,9 +63,10 @@ a {
 }
 
 .footer-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  margin-top: 2rem;
+	padding-bottom: 0.75rem;
+	display: flex;
+	justify-content: space-between;
 }
 
 .footer-card {
