Edit UI make sure is good on the phone

--- a/frontend/src/components/CurrentWeather.css
+++ b/frontend/src/components/CurrentWeather.css
@@ -1,21 +1,11 @@
-.mainicon {
-  max-width: 100%;
-  margin: 0 auto;
-}
-
-.current-weather h2 {
-  margin: 0;
-	font-weight: 700;
-}
-
 .weather-wrap {
   display: flex;
 	justify-content: center;
 	align-items: center;
-	padding-top: 20px;
 	border-radius: 15px;
 	overflow: hidden;
 	border: 3px solid #fff;
+  margin-bottom: 0.5rem;
 	box-shadow: 0 8px 10px -4px rgba(#000, 0.2);
 	transform-origin: center center;
 	transition: 0.15s ease;
@@ -31,42 +21,42 @@
 }
 
 .icon-container {
-  height: 80px;
+  height: 5rem;
 }
 
 p {
   color: var(--c-gray-600);
-  margin-top: 0.375em;
+  margin: 0;
 }
 
 @media (max-width: 500px) {
   .smartphone h2 {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
   p {
     font-size: 1rem;
   }
   .mainicon {
-    height: 120px;
+    height: 5rem;
   }
   .wrap-icon {
     margin: 0 30px; 
-    padding: 10px;
+    padding: 0.5rem;
   }
   .icon-container img{
-    height: 40px;
+    height: 2.5rem;
   }
 }
 
 @media (min-width: 501px) and (max-width: 768px) {
   .tablet h2 {
-    font-size: 3.5rem;
+    font-size: 2rem;
   }
   p {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
   .mainicon {
-    height: 150px;
+    height: 7rem;
   }
   .wrap-icon {
     margin: 0 40px; 
@@ -79,13 +69,13 @@ p {
 
 @media (min-width: 769px){
   .normal h2 {
-    font-size: 5rem;
+    font-size: 2.5rem;
   }
   p {
-    font-size: 2rem;
+    font-size: 1.75rem;
   }
   .mainicon {
-    height: 180px;
+    height: 10rem;
   }
   .wrap-icon {
     margin: 0 50px; 
