--- a/frontend/src/pages/Location.css
+++ b/frontend/src/pages/Location.css
@@ -2,15 +2,17 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  padding: 2rem;
+  backdrop-filter: blur(5px);
 }
 
 .wraptop-today {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  background-color: #d3d3d3;
-  margin-top: 0;
-  padding: 0px;
+  padding: 1rem 2rem;
+  border-radius: 10px;
+  margin-bottom: 1.5rem;
 }
 
 .wraptop-today h2 { 
@@ -31,17 +33,28 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: solid 1px black;
-  padding-left: 10px;
+  border-bottom: solid 1px gray;
+  padding: 1rem 2rem;
+  transition: background-color 0.3s ease;
+}
+
+.location-card:hover {
+  background-color: #ffdbdb;
 }
 
 .location-card p {
   text-align: center; 
-  flex-grow: 1; /* Allow the p tag to take up all available space between icons */
+  flex-grow: 1;
+  margin: 0;
 }
 
-.trash-icon {
-  margin-right: 10px;
+.trash-icon, .location-icon, .plus-icon, .home-icon {
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.trash-icon:hover, .location-icon:hover, .plus-icon:hover, .home-icon:hover {
+  transform: scale(1.1);
 }
 
 @media (max-width: 500px) {
