--- a/frontend/src/components/SettingOption.css
+++ b/frontend/src/components/SettingOption.css
@@ -1,8 +1,16 @@
+.settingOption {
+  backdrop-filter: blur(5px);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(4.8px);
+  border: 1px solid rgba(255, 255, 255, 0.28);
+  padding: 1em;
+}
+
 .goback-icon {
   display: flex;
   justify-content: start;
   align-items: center;
-  margin: 20px;
+  cursor: pointer;
 }
 
 .goback-icon img {
@@ -10,8 +18,64 @@
   background-color: rgb(184, 182, 182);
   padding: 10px;
 }
+
+.setting-box h3 {
+  color: #222222;
+  border-bottom: 1px solid #e0e0e0;
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+}
+
+.question-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.question-box p {
+  flex: 1;
+  margin-right: 15px;
+}
+
+.question-box button {
+  background-color: #FDC69D;
+  color: #6A656A;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 15px;
+  cursor: pointer;
+}
+
+.question-box button:disabled {
+  background-color: #c2c2c2;
+  cursor: not-allowed;
+}
+
+.question-box input {
+  padding: 8px;
+  border: 1px solid #e0e0e0;
+  border-radius: 4px;
+  width: 50px;
+  text-align: center;
+}
+
 .save-btn {
-  margin-top: 20px;
+  background-color: #FDC69D;
+  color: #6A656A;
+  border: none;
+  border-radius: 4px;
+  padding: 12px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  width: 100%;
+  display: block;
+}
+
+.save-btn:hover ,.question-box button:hover{
+  background-color: #B45004;
+  color: #F8EEEE;
 }
 
 @media (max-width: 500px) {
