--- a/frontend/src/pages/Setting.css
+++ b/frontend/src/pages/Setting.css
@@ -2,31 +2,54 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  padding: 20px 0;
 }
 
 .wraptop-today {
   display: flex;
-  justify-content: start;
+  justify-content: space-between;
   align-items: center;
-  background-color: #d3d3d3;
-  margin-top: 0;
-  padding: 0px;
+  padding: 1rem 2rem;
+  border-radius: 10px;
+  margin-bottom: 1.5rem;
+}
+
+.setting-card {
+  margin-bottom: 20px;
+  backdrop-filter: blur(5px);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(4.8px);
+  border: 1px solid rgba(255, 255, 255, 0.28);
+  padding: 1em;
 }
 
 .setting-card h3 {
-  text-align: start;
-  margin-bottom: 5px;
+  color: #222222;
+  border-bottom: 1px solid #e0e0e0;
+  padding-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .set-info {
   display: flex;
   justify-content: start;
-  align-items: center; 
-  border: solid 1px black; 
+  align-items: center;
+  padding: 10px;
+  border: solid 1px #e0e0e0;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  transition: background-color 0.3s;
+}
+
+.set-info:hover {
+  background-color: #FED9D7;
+  cursor: pointer;
 }
 
 .setting-icon {
-  margin-left: 10px;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
   margin-right: 20px;
 }
 
@@ -34,9 +57,15 @@ select {
   margin-left: 10px;
 }
 
+.setting-icon img {
+  max-width: 100%;
+  height: auto;
+}
+
 @media (max-width: 500px) {
   .smartphone .wraptop-today {
-    width: 400px;
+    width: 90%;
+    margin: 0 auto;
   }
   .wraptop-today h2{
     font-size: 20px;
@@ -52,11 +81,16 @@ select {
   .setting-card p {
     font-size: 14px;
   }
+  .setting-card {
+    width: 90%;
+    margin: 15px auto;
+  }
 }
 
 @media (min-width: 501px) and (max-width: 768px) {
-  .tablet .wraptop-today {
-    width: 600px;
+  .tablet .wraptop-today .setting-card{
+    width: 85%;
+    margin: 0 auto;
   }
   .wraptop-today h2{
     font-size: 25px;
@@ -74,8 +108,9 @@ select {
   }
 }
 @media (min-width: 769px){
-  .normal .wraptop-today {
-    width: 800px;
+  .normal .wraptop-today .setting-card{
+    width: 75%;
+    margin: 0 auto;
   }
   .wraptop-today h2{
     font-size: 30px;
