edited CSS that every page is right fit

--- a/frontend/src/components/SettingOption.css
+++ b/frontend/src/components/SettingOption.css
@@ -1,9 +1,6 @@
 .settingOption {
   backdrop-filter: blur(5px);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(4.8px);
-  border: 1px solid rgba(255, 255, 255, 0.28);
-  padding: 1em;
+  padding: 2rem;
 }
 
 .goback-icon {
