--- a/frontend/src/components/Recommendation.css
+++ b/frontend/src/components/Recommendation.css
@@ -5,10 +5,9 @@
   margin: 2.5rem;
 }
 .recommendation-section p {
-  margin-top: 30px;
-  margin-bottom: 0;
   font-size: 1.125rem;
 	font-weight: 500;
+	margin-bottom: 0.5rem;
 }
 
 .jacket-icon {
@@ -105,7 +104,7 @@
     font-size: 24px; 
   }
   .card {
-    max-width: 50%;
+    max-width: 65%;
   }
 	.card-pin {
 		width: 6px;
@@ -125,7 +124,7 @@
     font-size: 28px;
   }
   .card {
-    max-width: 60%;
+    max-width: 70%;
   }
 }
 
@@ -134,6 +133,6 @@
     font-size: 32px; 
   }
   .card{
-    max-width: 70%;
+    max-width: 80%;
   }
 }
