--- a/frontend/src/pages/Setting.css
+++ b/frontend/src/pages/Setting.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 20px 0;
+  padding: 2rem;
 }
 
 .wraptop-today {
@@ -62,6 +62,10 @@ select {
   height: auto;
 }
 
+.home-icon img {
+  width: 40px;
+}
+
 @media (max-width: 500px) {
   .smartphone .wraptop-today {
     width: 90%;
@@ -71,7 +75,6 @@ select {
     font-size: 20px;
   }
   .home-icon img {
-    width: 20px;
     margin-right: 10px;
     margin-left: 5px;
   }
@@ -96,7 +99,6 @@ select {
     font-size: 25px;
   }
   .home-icon img {
-    width: 30px;
     margin-right: 15px;
     margin-left: 10px;
   }
@@ -116,7 +118,6 @@ select {
     font-size: 30px;
   }
   .home-icon img {
-    width: 40px;
     margin-right: 20px;
     margin-left: 10px;
   }
