--- a/frontend/src/pages/Alert.css
+++ b/frontend/src/pages/Alert.css
@@ -4,35 +4,14 @@
   padding: 2rem;
 }
 
-.wraptop-today {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 2rem;
-  border-radius: 10px;
-  margin-bottom: 1.5rem;
-}
-
 .alert-content {
   align-items: center;
 }
 
-.home-icon img {
-  width: 40px;
-}
 @media (max-width: 500px) {
-  .smartphone .wraptop-today {
-    width: 400px;
-  }
-  .wraptop-today h2{
-    font-size: 20px;
-  }
-  .home-icon img {
-    margin-right: 10px;
-    margin-left: 5px;
-  }
+  .smartphone
   .alert-content {
-    width: 350px;
+    width: 400px;
   }
   .alert-content h3 {
     font-size: 16px;
@@ -43,18 +22,9 @@
 }
 
 @media (min-width: 501px) and (max-width: 768px) {
-  .tablet .wraptop-today {
-    width: 600px;
-  }
-  .wraptop-today h2{
-    font-size: 25px;
-  }
-  .home-icon img  {
-    margin-right: 15px;
-    margin-left: 10px;
-  }
+  .tablet
   .alert-content {
-    width: 400px;
+    width: 500px;
   }
   .alert-content h3 {
     font-size: 18px;
@@ -64,18 +34,9 @@
   }
 }
 @media (min-width: 769px){
-  .normal .wraptop-today {
-    width: 800px;
-  }
-  .wraptop-today h2{
-    font-size: 30px;
-  }
-  .home-icon img {
-    margin-right: 20px;
-    margin-left: 10px;
-  }
+  .normal  
   .alert-content {
-    width: 600px;
+    width: 650px;
   }
   .alert-content h3{
     font-size: 20px;
