--- a/frontend/src/pages/Location.css
+++ b/frontend/src/pages/Location.css
@@ -6,20 +6,6 @@
   backdrop-filter: blur(5px);
 }
 
-.wraptop-today {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 2rem;
-  border-radius: 10px;
-  margin-bottom: 1.5rem;
-}
-
-.wraptop-today h2 { 
-  text-align: start;
-  flex-grow: 1;
-}
-
 .plus-icon {
   margin-right: 10px;
 }
@@ -58,11 +44,11 @@
 }
 
 @media (max-width: 500px) {
-  .smartphone .wraptop-today {
-    width: 400px;
-  }
-  h2 {
+  .smartphone h2 {
     font-size: 20px;
+  }
+  .location-card {
+    width: 400px;
   }
   .location-card p {
     font-size: 16px;
@@ -70,22 +56,22 @@
 }
 
 @media (min-width: 501px) and (max-width: 768px) {
-  .tablet .wraptop-today  {
-    width: 600px;
-  }
-  h2 {
+  .tablet h2 {
     font-size: 25px;
+  }
+  .location-card {
+    width: 500px;
   }
   .location-card p {
     font-size: 17px;
   }
 }
 @media (min-width: 769px){
-  .normal .wraptop-today  {
-    width: 800px;
-  }
-  h2 {
+  .normal h2 {
     font-size: 30px;
+  }
+  .location-card {
+    width: 650px;
   }
   .location-card p {
     font-size: 18px;
