--- a/frontend/src/pages/Search.css
+++ b/frontend/src/pages/Search.css
@@ -5,15 +5,6 @@
   padding: 2rem;
 }
 
-.wraptop-today {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  background-color: #d3d3d3;
-  margin-top: 0;
-  padding: 0px;
-}
-
 .back-icon img {
   margin-right: 20px;
   margin-left: 10px;
@@ -122,12 +113,7 @@
 }
 
 @media (max-width: 500px) {
-  .smartphone .wraptop-today {
-    width: 400px;
-  }
-  .wraptop-today h2{
-    font-size: 20px;
-  }
+  .smartphone
   .back-icon img, .search-icon img {
     width: 20px;
     margin-right: 10px;
@@ -139,15 +125,13 @@
   input {
     font-size: 14px;
   }
+	.search-box, .search-result {
+		width: 400px;
+	}
 }
 
 @media (min-width: 501px) and (max-width: 768px) {
-  .tablet .wraptop-today {
-    width: 600px;
-  }
-  .wraptop-today h2{
-    font-size: 25px;
-  }
+  .tablet 
   .back-icon img, .search-icon img {
     width: 30px;
     margin-right: 15px;
@@ -159,14 +143,13 @@
   input {
     font-size: 15px;
   }
+	.search-box, .search-result {
+		width: 500px;
+	}
 }
+
 @media (min-width: 769px){
-  .normal .wraptop-today {
-    width: 800px;
-  }
-  .wraptop-today h2{
-    font-size: 30px;
-  }
+  .normal 
   .back-icon img, .search-icon img{
     width: 40px;
     margin-right: 20px;
@@ -178,4 +161,7 @@
   input {
     font-size: 16px;
   }
+	.search-box, .search-result{
+		width: 650px;
+	}
 }
