--- a/frontend/src/pages/Today.css
+++ b/frontend/src/pages/Today.css
@@ -30,11 +30,24 @@
   }
 }
 
+.astro-icon {
+  margin-bottom: 1rem;
+}
+
+.astro-icon img {
+  width: 4rem;
+}
+
 .info-icon {
   display: flex;
-  height: 70px;
+  height: 50px;
   align-items: center;
   justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.info-icon img {
+  width: 2.5rem;
 }
 
 .info-data {
@@ -64,7 +77,7 @@
 
 @media (max-width: 500px) {
   .smartphone .today-section {
-    width: 400px;
+    width: 360px;
   }
   h3 {
     font-size: 20px;
@@ -79,7 +92,7 @@
 
 @media (min-width: 501px) and (max-width: 768px) {
   .tablet .today-section {
-    width: 600px;
+    width: 500px;
   }
   h3 {
     font-size: 30px;
@@ -94,7 +107,7 @@
 }
 @media (min-width: 769px){
   .normal .today-section {
-    width: 800px;
+    width: 650px;
   }
   h3 {
     font-size: 40px;
