--- a/frontend/src/pages/Search.css
+++ b/frontend/src/pages/Search.css
@@ -83,6 +83,7 @@
 	border-radius: 0 15px 15px 0;
 	height: 100%;
 	background-color: #fff;
+	color: black;
 	width: 100%;
 	padding-left: 1em;
 	padding-right: 1em;
