--- a/frontend/src/pages/Today.css
+++ b/frontend/src/pages/Today.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 2rem;
+  /* padding: 2rem; */
 }
 
 .today-data {
@@ -54,7 +54,7 @@
   display: grid; 
   grid-auto-flow: row dense;
   gap: 1em;
-  grid-template: repeat(4, 1fr) / repeat(3, 1fr);
+  grid-template: repeat(1, 1fr) / repeat(3, 1fr);
 }
 
 .info-card {
